--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,12 +1,15 @@
-<h3>Schedules</h3>
-<% if @schedules.blank? %>
-  <p>There are no active schedules</p>
-<% else %>
-  <ul>
-    <% @schedules.each do |schedule| %>
-      <li><%= link_to schedule.created_at.to_s, schedule %></li>
-    <% end %>
-  </ul>
-  <br/>
-  <div><%= paginate @schedules %><div>
-<% end %>
+<div>
+  <h3>Schedules</h3>
+  <% if @schedules.blank? %>
+    <p>There are no active schedules</p>
+  <% else %>
+    <ul class="list-group">
+      <% @schedules.each do |schedule| %>
+        <li class="list-group-item d-inline-flex flex-row justify-content-between">
+          <%= link_to schedule.created_at.to_s, schedule %>
+          <span class><%= schedule.tasks.count %></span>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
