--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Omcalendar</title>
+    <title>OMC</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -35,7 +35,7 @@
         </div>
       </div>
     </nav>
-    <main class="container-xxl bd-gutter mt-5 bd-layout">
+    <main class="container-xxl bd-gutter mt-6 bd-layout">
       <%= yield %>
     </main>
   </body>
