--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,13 +1,18 @@
 <div>
-  <h3>Schedules</h3>
-  <%= link_to "Add schedule", new_schedule_path %>
+  <div class="d-flex flex-row">
+    <div><h3>Schedules</h3></div>
+    <div class="ms-auto">
+      <%= link_to "Add schedule", new_schedule_path, class: "btn btn-primary" %>
+    </div>
+  </div>
   <% if @schedules.blank? %>
     <p>There are no active schedules</p>
+
   <% else %>
     <ul class="list-group">
       <% @schedules.each do |schedule| %>
         <li class="list-group-item d-inline-flex flex-row justify-content-between">
-          <%= link_to schedule.created_at.to_s, schedule %>
+          <%= link_to schedule.title, schedule %>
           <span class><%= schedule.tasks.count %></span>
         </li>
       <% end %>
