--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,7 +1,53 @@
 <% current_month_calendar = Calendars::Month.new(Date.current) %>
 
-<h3>Schedule <%= @schedule.id %></h3>
-<%= link_to "Create a new task", new_schedule_task_path(@schedule), method: :post %>
+<div class="d-flex flex-row">
+  <div><h3>Schedule <%= @schedule.title %></h3></div>
+  <div class="ms-auto">
+    <%= link_to "Edit schedule", edit_schedule_path(@schedule), class: "btn btn-primary" %>
+  </div>
+</div>
+
+<%
+  first_day_idx = Date::DAYS_INTO_WEEK[Rails.configuration.beginning_of_week]
+  days = Date::DAYS_INTO_WEEK.invert.to_a
+  days = (days[first_day_idx..] + days[...first_day_idx]).map(&:second)
+%>
+
+<div class="container">
+  <div class="row">
+    <% days.map do |day_name| %>
+      <div class="col"><%= day_name.to_s.capitalize.first %></div>
+    <% end %>
+  </div>
+  <% current_month_calendar.weeks.each do |week| %>
+    <div class="row">
+      <% week.days.each do |day| %>
+        <div class="col"><%= day.to_s(:calendar_day) %></div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
+
+<table>
+  <tr>
+    <td>🌊</td>
+    <td></td>
+    <% Date.current.all_week.each do |day| %>
+      <td><%= Date::DAYS_INTO_WEEK.find { _2 === day.wday }.first.to_s.first.capitalize %></td>
+    <% end %>
+  </tr>
+  <% current_month_calendar.weeks.each do |week| %>
+    <tr>
+      <td><%= week.cweek %></td>
+      <td>|</td>
+      <% week.days.each do |day| %>
+        <td data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Tooltip on top"><%= day.to_s(:calendar_day)%></td>
+      <% end %>
+    </tr>
+  <% end %>
+</table>
+
+<%= link_to "Create a new task", new_schedule_task_path(@schedule) %>
 
 <div class="row">
   <div class="col-md-9">
@@ -17,8 +63,18 @@
   </div>
 
   <div class="col-md">
+    <% if @schedule.description.present? %>
+      <p><%= @schedule.description %></p>
+    <% end %>
     <div><b>Calendar</b></div>
     <table>
+      <tr>
+        <td>🌊</td>
+        <td></td>
+        <% Date.current.all_week.each do |day| %>
+          <td><%= Date::DAYS_INTO_WEEK.find { _2 === day.wday }.first.to_s.first.capitalize %></td>
+        <% end %>
+      </tr>
       <% current_month_calendar.weeks.each do |week| %>
         <tr>
           <td><%= week.cweek %></td>
