--- a/app/views/todos/tasks/index.html.erb
+++ b/app/views/todos/tasks/index.html.erb
@@ -1,13 +1,16 @@
-<%= notice %>
 <% @tasks.each do |task| %>
-  <div class="form-check">
-    <%= form_with model: task do |f| %>
+  <%= form_with model: task do |f| %>
+    <div class="form-check">
       <%= f.check_box :state, { class: "form-check-input", data: { controller: "todos--tasks", "todos--tasks-target" => "state", action: "input->todos--tasks#updateState"} }, "completed", "started" %>
-      <%= f.label :title, class: "form-check-label" do %>
-        <%= task.title %>
+      <%= f.label :state, class: "form-check-label" do %>
+        <%= "#{task.title} - #{task.state}" %>
       <% end %>
+    </div>
+  <% end %>
+<% end %>
 
-      <%= submit_tag %>
-    <% end %>
-  </div>
+<%= form_with model: @new_task do |f| %>
+  <p>Add New Task</p>
+  <%= f.text_field :title %>
+  <%= submit_tag %>
 <% end %>
