--- a/app/views/todos/tasks/index.html.erb
+++ b/app/views/todos/tasks/index.html.erb
@@ -1,16 +1,9 @@
-<% @tasks.each do |task| %>
-  <%= form_with model: task do |f| %>
-    <div class="form-check">
-      <%= f.check_box :state, { class: "form-check-input", data: { controller: "todos--tasks", "todos--tasks-target" => "state", action: "input->todos--tasks#updateState"} }, "completed", "started" %>
-      <%= f.label :state, class: "form-check-label" do %>
-        <%= "#{task.title} - #{task.state}" %>
-      <% end %>
-    </div>
-  <% end %>
-<% end %>
+<p>started</p>
+<%= render partial: "todos/tasks/components/list", locals: { tasks: @tasks.started } %>
+<hr />
+<p>completed</p>
+<%= render partial: "todos/tasks/components/list", locals: { tasks: @tasks.completed } %>
 
 <%= form_with model: @new_task do |f| %>
-  <p>Add New Task</p>
   <%= f.text_field :title %>
-  <%= submit_tag %>
 <% end %>
