Messages API WIP

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
               <li class="nav-item">
                 <%= link_to "Schedules", root_path, class: "nav-link" %>
               </li>
+              <li class="nav-item">
+                <%= link_to "Google Inbox", gapps_emails_path, class: "nav-link" %>
+              </li>
             </ul>
           </div>
         </div>
